# pm-ai-toolkit

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
adapters/: __init__.py  llm.py
evals/: rubric.md  runner.py
evals/test_cases/: prd_sample.json
examples/: meeting_summary_demo.py  prd_demo.py
examples/sample_inputs/: meeting_notes.txt  prd_notes.md
examples/sample_outputs/: meeting_summary.json  prd_output.json
prompts/: base_template.md  meeting_summariser.md  prd_generator.md
schemas/: __init__.py  meeting.py  prd.py  roadmap.py
tests/: test_adapters.py  test_schemas.py  test_utils.py
utils/: __init__.py  config.py  files.py  text.py
